[package]
name = "keypropdecode"
version = "0.1.0"
edition = "2021"
authors = ["kinire98"]
description = "A library for decoding Windows file system elements attributes constants"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
